--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,13 +1,18 @@
 [defaults]
-inventory = inventory
-filter_plugins = filter_plugins
-command_warnings = False
 host_key_checking = False
-deprecation_warnings=False
-retry_files = false
+remote_user = root
+inventory = ./inventory
+roles_path = ./roles
+library = ./library
+remote_tmp = /tmp
+callback_whitelist = profile_tasks,timer
+filter_plugins = ./plugins/filter_plugins
+lookup_plugins = ./plugins/lookup_plugins
+command_warnings = True
+ansible_managed = "This file is managed by Ansible - changes may be lost"
+#hash_behaviour = merge
 
-[privilege_escalation]
-become = true
-become_method = sudo
-become_user = root
-become_ask_pass = false
+[ssh_connection]
+pipelining = True
+#ssh_args = -o ControlMaster=auto -o ControlPersist=80s -o VerifyHostKeyDNS=no
+
